--- a/src/components/dashboard/lessonapp_area/Topbar.css
+++ b/src/components/dashboard/lessonapp_area/Topbar.css
@@ -67,8 +67,13 @@
     display: flex;
     margin:  0px;
 }
+
 .topbar-tab1 {
     margin: 24px 0px 24px 24px;
+}
+
+.topbar-tab1 > a > span {
+    fill: none;
 }
 
 .topbar-tab2 {
