--- a/src/pages/DashboardPage.css
+++ b/src/pages/DashboardPage.css
@@ -1,6 +1,6 @@
 .workarea-container {
     width: 100%;
-    margin: 12px;
+    margin: 12px 12px 12px 0px;
     border-radius: 24px;
     height: calc(100vh - 24px);
 }
