--- a/src/components/common/gpthub_commons/GptChatsCardBox.css
+++ b/src/components/common/gpthub_commons/GptChatsCardBox.css
@@ -1,12 +1,8 @@
-.gpthub-topbar-btn {
-    /* margin-right: 5px; */
-}
-
-.gpthub-topbar-btn > button {
-    width: 150px;
-    height: 52px;
+.gpthub-selectedcard {
+    display: flex;
     border-radius: 12px;
-    border: none;
     border-top: 1px solid var(--glass-stroke, rgba(255, 255, 255, 0.08));
     background: var(--glass-fill, linear-gradient(145deg, rgba(215, 237, 237, 0.16) 0%, rgba(204, 235, 235, 0.00) 100%));
+    padding: 26px 0px 21px 0px;
+    width: 80%;
 }
