--- a/src/components/dashboard/gpthub_area/GpthubChatsTopbar.css
+++ b/src/components/dashboard/gpthub_area/GpthubChatsTopbar.css
@@ -1,5 +1,8 @@
 .gpthub-topbar-btn-container {
-    width: 100%;
+    width: 90%;
     display: flex;
     justify-content: space-between;
+    margin-left: 5%;
+    margin-top: 10px;
+    margin-bottom: 19px;
 }
