--- a/src/components/dashboard/lessonapp_area/LessonChat.css
+++ b/src/components/dashboard/lessonapp_area/LessonChat.css
@@ -24,16 +24,37 @@
     fill: none;
     width: 53px;
     height: 53px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     text-align: center;
+    align-items: center;
     font-weight: bold;
-    padding: 14px;
-    border-radius: 50%;
+    padding: 14px 14px;
+    border-radius: 56px;
     border-top: 1px solid var(--glass-stroke, rgba(255, 255, 255, 0.08));
-    background: linear-gradient(142deg, rgba(14, 14, 15, 0.80) 57.81%, rgba(19, 22, 25, 0.80) 100%);
-    box-shadow: 0px 4px 6px -4px rgba(255, 209, 71, 0.16), 0px 10px 15px -3px rgba(255, 209, 71, 0.16);
+    background: var(--glass-modal, rgba(26, 29, 33, 0.96));
+}
+
+.depth-icon {
+    filter: drop-shadow(0px 4px 6px rgba(182, 240, 156, 0.16)) drop-shadow(0px 10px 15px rgba(182, 240, 156, 0.16));
+}
+
+.learningstyle-icon {
+    box-shadow: 0px 0px 64px 0px rgba(130, 219, 247, 0.16);
+    filter: drop-shadow(0px 4px 6px rgba(130, 219, 247, 0.16)) drop-shadow(0px 10px 15px rgba(130, 219, 247, 0.16));
+}
+
+.communicstyle-icon {
+    filter: drop-shadow(0px 4px 6px rgba(189, 154, 248, 0.16)) drop-shadow(0px 10px 15px rgba(189, 154, 248, 0.16));
+    box-shadow: 0px 0px 64px 0px rgba(189, 154, 248, 0.16);
+}
+
+.tonestyle-icon {
+    box-shadow: 0px 0px 64px 0px rgba(255, 209, 71, 0.16);
+    filter: drop-shadow(0px 4px 6px rgba(255, 209, 71, 0.16)) drop-shadow(0px 10px 15px rgba(255, 209, 71, 0.16));
+}
+
+.reasonf-icon {
+    box-shadow: 0px 0px 64px 0px rgba(255, 209, 71, 0.16);
+    filter: drop-shadow(0px 4px 6px rgba(255, 209, 71, 0.16)) drop-shadow(0px 10px 15px rgba(255, 209, 71, 0.16));
 }
 
 .depth-icon path{
