--- a/src/components/dashboard/lessonapp_area/Topbar.css
+++ b/src/components/dashboard/lessonapp_area/Topbar.css
@@ -104,7 +104,7 @@
 
 .tab1-icon {
     margin: 0px 12px 0px 12px;
-    box-shadow: 0px 4px 6px -4px rgba(182, 240, 156, 0.16), 0px 10px 15px -3px rgba(182, 240, 156, 0.16);
+    filter: drop-shadow(0px 4px 6px rgba(182, 240, 156, 0.16)) drop-shadow(0px 10px 15px rgba(182, 240, 156, 0.16));
 }
 
 .tab1-icon path {
