--- a/src/components/dashboard/sidebar/WorkingSpace.css
+++ b/src/components/dashboard/sidebar/WorkingSpace.css
@@ -27,7 +27,7 @@
     padding: 0px;
 }
 
-.learning-list-container > ul > li > a {
+.learning-list-container > ul > li > .menu-btn-standard {
     height: 100%;
     border-radius: 8px;
     text-decoration: none;
@@ -42,7 +42,12 @@
 }
 
 
-.learning-list-container > ul >li > a:hover {
+.learning-list-container > ul >li > .menu-btn-standard:hover {
+    border-top: 1px solid var(--glass-stroke, rgba(255, 255, 255, 0.08));
+    background: var(--glass-fill, linear-gradient(145deg, rgba(215, 237, 237, 0.16) 0%, rgba(204, 235, 235, 0.00) 100%));
+}
+
+.learning-list-container > ul >li > .menu-btn-standard.active {
     border-top: 1px solid var(--glass-stroke, rgba(255, 255, 255, 0.08));
     background: var(--glass-fill, linear-gradient(145deg, rgba(215, 237, 237, 0.16) 0%, rgba(204, 235, 235, 0.00) 100%));
 }
@@ -55,7 +60,7 @@
 
 .learn-icon {
     margin-right: 16px;
-    box-shadow: 0px 4px 6px -4px rgba(182, 240, 156, 0.16), 0px 10px 15px -3px rgba(182, 240, 156, 0.16);
+    filter: drop-shadow(0px 4px 6px rgba(182, 240, 156, 0.16)) drop-shadow(0px 10px 15px rgba(182, 240, 156, 0.16));
 }
 
 .gpthub_icon path{
@@ -66,7 +71,7 @@
 
 .gpthub_icon {
     margin-right: 16px;
-    box-shadow: 0px 4px 6px -4px rgba(189, 59, 58, 0.16), 0px 10px 15px -3px rgba(189, 59, 58, 0.16);
+    filter: drop-shadow(0px 4px 6px rgba(189, 59, 58, 0.16)) drop-shadow(0px 10px 15px rgba(189, 59, 58, 0.16));
 }
 
 .personal_ai_icon rect{
@@ -77,7 +82,7 @@
 
 .personal_ai_icon {
     margin-right: 16px;
-    box-shadow: 0px 4px 6px -4px rgba(226, 111, 32, 0.16), 0px 10px 15px -3px rgba(226, 111, 32, 0.16);
+    filter: drop-shadow(0px 4px 6px rgba(226, 111, 32, 0.16)) drop-shadow(0px 10px 15px rgba(226, 111, 32, 0.16));
 }
 
 .booking_icon path {
@@ -88,7 +93,7 @@
 
 .booking_icon {
     margin-right: 16px;
-    box-shadow: 0px 4px 6px -4px rgba(130, 219, 247, 0.16), 0px 10px 15px -3px rgba(130, 219, 247, 0.16);
+    filter: drop-shadow(0px 4px 6px rgba(130, 219, 247, 0.16)) drop-shadow(0px 10px 15px rgba(130, 219, 247, 0.16));
 }
 
 
